--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2032,7 +2032,7 @@ body:not(.ignore-now-playing).refined-now-playing {
 		#time-indicator {
 			transition: transform .3s ease, opacity .3s ease, right .3s ease;
 		}
-		&:not(:hover) {
+		&:not(:hover):not(.mq-playing-scroll) {
 			#main-player, .m-pinfo .btns > .btn{
 				transform: translateY(calc(var(--bottombar-height) - 5px));
 			}
@@ -2043,7 +2043,7 @@ body:not(.ignore-now-playing).refined-now-playing {
 				transform: translateY(calc(-50% + 5px - var(--bottombar-height)));
 			}
 		}
-		&:not(.bottombar-hover) #time-indicator {
+		&:not(.bottombar-hover):not(.mq-playing-scroll) #time-indicator {
 			right: 25px !important;
 		}
 
